# reor

./: .gitignore  .gitmodules  .pylintrc  .travis.yml  CMakeLists.txt  README.md  setup.py
bindings/: CMakeLists.txt
bindings/pyreor/: CMakeLists.txt  __init__.py  _archetypal_analysis.py  _random_matrix.py  _spa.py  _validation.py
bindings/pyreor/src/: pyreor.cpp  pyreor_eigen_kernel_aa.hpp  pyreor_eigen_l2_spa.hpp  pyreor_kernel_aa.hpp  pyreor_l2_spa.hpp
cmake/: CompilerWarnings.cmake  ReorBuildOptions.cmake  ReorConfig.cmake.in  ReorGenerateConfig.cmake  add_cxx_flag_if_supported.cmake
examples/: CMakeLists.txt
examples/factor_csv/: CMakeLists.txt  csv_utils.cpp  csv_utils.hpp  factor_csv_l2spa.cpp  l2spa_fit_wrappers.cpp  l2spa_fit_wrappers.hpp
examples/fem-bv-kmeans/: gaussian_clusters.py
examples/fem-bv-varx/: periodic.py  switching.py
examples/fit_csv/: CMakeLists.txt  fit_csv_l2trspa.cpp  l2trspa_fit_wrappers.cpp  l2trspa_fit_wrappers.hpp
examples/lorenz63/: CMakeLists.txt  cross_validation.hpp  l2spa_fit_wrappers.hpp  lorenz63_rk4_model.cpp  lorenz63_rk4_model.hpp  lorenz63_system.hpp  run_lorenz63_l2spa.cpp
examples/pwvarx/: kmeans_siso.py
reor/: backend_interface.hpp  furthest_sum.hpp  gpnh_dar_regularizer.hpp  gpnh_regularizer.hpp  kernel_aa.hpp  l2_spa.hpp  l2_spa_regularizations.hpp  matrix_factorization_helpers.hpp  spg.hpp  trivial_matrix_factorization_regularizer.hpp
reor/backends/: eigen_backend.hpp
src/reor/: __init__.py  _validation.py  archetypal_analysis.py  bindings.cpp  convex_coding.py  crom.py  eigen_convex_coding.hpp  eigen_kernel_aa.hpp  fembv.py  fembv_kmeans.py  fembv_varx.py  furthest_sum.py  gpnh_convex_coding.py  gpnh_convex_coding_crom.py  mtd_convex_coding.py  ppca.py  pwvarx.py  simplex_projection.py  spg.py  var.py
src/reor/reor_cxx/: backend_interface.hpp  backends.hpp  convex_coding.hpp  gpnh_l2_spa.hpp  kernel_aa.hpp  numerics_helpers.hpp  random_matrix.hpp
src/reor/reor_cxx/backends/: eigen_backend.hpp  eigen_type_traits.hpp
test/: CMakeLists.txt  comparison_helpers.hpp  test_eigen_backend.cpp  test_furthest_sum.cpp  test_gpnh_dar_regularizer.cpp  test_gpnh_regularizer.cpp  test_kernel_aa.cpp  test_l2_spa.cpp  test_l2_spa_regularizations.cpp  test_trivial_matrix_factorization_regularizer.cpp
test/catch/: catch.hpp
tests/: comparison_helpers.hpp  test_archetypal_analysis.py  test_cpp.py  test_eigen_backend.cpp  test_fembv.py  test_fembv_varx.py  test_furthest_sum.cpp  test_furthest_sum.py  test_gpnh_convex_coding.py  test_gpnh_l2_spa.cpp  test_kernel_aa.cpp  test_mtd_convex_coding.py  test_ppca.py  test_simplex_projection.py  test_var.py
